# com_arm_uav

./: .gitignore  README.md
images/: data_pipeline.mmd  hardware_balancer.mmd  inference_pipeline.mmd  training_pipeline.mmd
install/: local_setup.sh  setup.sh
install/robot_arm2/lib/robot_arm2/: new_arm_joint_slider.py
install/robot_arm2/share/robot_arm2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/: armfinal_dynamic_com_dataset.csv
ros2_ws/preprocessed_armfinal/: best_com_model_armfinal.pth  com_preprocessed_test.npz  com_preprocessed_train.npz  preprocessed_summary.txt  scaler_params.npz
ros2_ws/src/armfinal_description/: CMakeLists.txt  package.xml
ros2_ws/src/armfinal_description/config/: armfinal_controllers.yaml
ros2_ws/src/armfinal_description/launch/: armfinal_gazebo.launch.py  controller.launch  controller.yaml  display.launch  gazebo.launch
ros2_ws/src/armfinal_description/meshes/: 81201_1.stl  81202_1.stl  base_link (1).stl  bibutt_1.stl  but_1.stl  hopbut_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl  link5_1.stl  mg901_1.stl  mg902_1.stl  mg903_1.stl  mg996_1.stl
ros2_ws/src/armfinal_description/scripts/: armfinal_joint_slider.py  battery_balancer_listener.py  com_dashboard_armfinal.py  data_generator.py  dynamic_data_recorder.py  dynamic_trajectory.py  evaluate_armfinal.py  preprocess_armfinal.py  train_armfinal.py  workspace_simulator.py
ros2_ws/src/armfinal_description/urdf/: armfinal.gazebo  armfinal.ros2_control.xacro  armfinal.xacro  materials.xacro
(+52 files in other folders)
